UPdate netbsd things

--- a/introduction/introduction.html
+++ b/introduction/introduction.html
@@ -56,10 +56,10 @@
         <li>メーラ
           <ol><li>CUIメーラ&mdash;&mdash;NeoMutt</li></ol>
         </li>
-        <li>暗号化・署名・パスワード管理
+        <li>暗号化・パスワード管理
           <ol>
             <li>暗号化と署名&mdash;&mdash;GnuPG</li>
-            <li>パスワードマネージャ&mdash;&mdash;Purse</li>
+            <li>パスワードマネージャ&mdash;&mdash;Password Store</li>
           </ol>
         </li>
         </ol>
