--- a/netbsd/pkg_install.html
+++ b/netbsd/pkg_install.html
@@ -1,130 +1,140 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../css/typesetting.css">
-    <title>e-yuuki.org</title>
-  </head>
-  <body>
-    <h1>pkg_installについて</h1>
-    <hr>
-    <ol>
-      <li><a href="#install">インストール</a></li>
-      <li><a href="#add">pkg_add(1)</a></li>
-      <li><a href="#admin">pkg_admin(1)</a></li>
-      <li><a href="#delete">pkg_delete(1)</a></li>
-      <li><a href="#create">pkg_create(1)</a></li>
-    </ol>
-    <h2 id="install">インストール</h2>
-    <p>NetBSDではベースシステムに含まれている。</p>
-    <p>pkgtools/pkg_installパッケージをインストールすることで、NetBSD以外のシステムにインストールしたり、ベースシステムのより新しいバージョンのものを利用できる。</p>
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
+<link rel="stylesheet" type="text/css" href="../css/typesetting.css">
+<title>e-yuuki.org</title>
+</head>
+<body>
+<h1>pkg_installについて</h1>
+<p>Last Update <time>2018-09-22</time></p>
+<hr>
+<ol>
+  <li><a href="#install">インストール</a></li>
+  <li><a href="#add">pkg_add(1)</a></li>
+  <li><a href="#admin">pkg_admin(1)</a></li>
+  <li><a href="#delete">pkg_delete(1)</a></li>
+  <li><a href="#create">pkg_create(1)</a></li>
+</ol>
 
-    <h2 id="add">pkg_add(1)</h2>
-    <p>pkg_add(1)はパッケージのインストールに使われる。pkgsrcでmake installすると裏で自動的に実行されるが、たまにパッケージを手動でインストールする場面もある。</p>
-    <p>manのEXAMPLESにあるように、パッケージを配布しているURLを環境変数PKG_PATHに指定すると、パッケージをそこからダウンロードしてインストールできる。</p>
-    <blockquote>
-      <p>In all cases, <b>pkg_add</b> will try to install binary packages listed in dependencies list.</p>
-      <p>You can specify a compiled binary package explicitly on the command line.</p>
-      <p># pkg_add /usr/pkgsrc/packages/All/tcsh-6.14.00.tgz</p>
-      <p>If you omit the version number, <b>pkg_add</b> will install the latest version available. With -v, <b>pkg_add</b> emits more messages to terminal.</p>
-      # pkg_add -v /usr/pkgsrc/packages/All/unzip
-      <p>You can grab a compiled binary package from remote location by specifying a URL. The base URL can also be provided by the configuration variable, PKG_PATH.</p>
-      <p># pkg_add -v ftp://ftp.NetBSD.org/pub/pkgsrc/packages/NetBSD/i386/3.1_2007Q2/All/firefox-2.0 .0.4.tgz</p>
-      <p># export PKG_PATH=ftp://ftp.NetBSD.org/pub/pkgsrc/packages/NetBSD/i386/3.1_2007Q2/All # pkg_add -v firefox</p>
-      <footer>&mdash; <cite>Jordan Hubbard, John Kohl, Hubert Feyrer, Thomas Klausner, Joerg Sonnenberger, PKG_ADD(1), General Commands Manual, 2010</cite></footer>
-    </blockquote>
+<h2 id="install">インストール</h2>
+<p>NetBSDではベースシステムに含まれている。pkgtools/pkg_installパッケージをインストールすることで、NetBSD以外のシステムにインストールしたりベースシステムのより新しいバージョンのpkg_*を使用できる。</p>
 
-    <h2 id="admin">pkg_admin(1)</h2>
-    <p>pkg_admin(1)は主に脆弱性のあるパッケージを見つけて、更新すべきパッケージを知るために使う。root権限で以下のように実行すると、どのパッケージがどのような脆弱性を抱えているのかがわかる。</p>
-    <pre><code># pkg_admin fetch-pkg-vulnerabilities
+<h2 id="add">pkg_add(1)</h2>
+<p>pkg_add(1)はパッケージのインストールに使われる。pkgsrcでmake installすると裏で自動的に実行されるが、たまにパッケージを手動でインストールする場面もある。man(1)のEXAMPLESにあるように、パッケージを配布しているURLを環境変数PKG_PATHに指定すると、パッケージをそのURLから探しインストールできる。</p>
+
+<blockquote>
+  <p>In all cases, <b>pkg_add</b> will try to install binary packages listed in dependencies list.</p>
+  <p>You can specify a compiled binary package explicitly on the command line.</p>
+  <p># pkg_add /usr/pkgsrc/packages/All/tcsh-6.14.00.tgz</p>
+  <p>If you omit the version number, <b>pkg_add</b> will install the latest version available. With -v, <b>pkg_add</b> emits more messages to terminal.</p>
+  # pkg_add -v /usr/pkgsrc/packages/All/unzip
+  <p>You can grab a compiled binary package from remote location by specifying a URL. The base URL can also be provided by the configuration variable, PKG_PATH.</p>
+  <p># pkg_add -v ftp://ftp.NetBSD.org/pub/pkgsrc/packages/NetBSD/i386/3.1_2007Q2/All/firefox-2.0 .0.4.tgz</p>
+  <p># export PKG_PATH=ftp://ftp.NetBSD.org/pub/pkgsrc/packages/NetBSD/i386/3.1_2007Q2/All # pkg_add -v firefox</p>
+  <footer>&mdash; <cite>Jordan Hubbard, John Kohl, Hubert Feyrer, Thomas Klausner, Joerg Sonnenberger, PKG_ADD(1), General Commands Manual, 2010</cite></footer>
+</blockquote>
+
+<h2 id="admin">pkg_admin(1)</h2>
+<p>pkg_admin(1)は主に脆弱性のあるパッケージを見つけて、更新すべきパッケージを知るために使う。root権限で以下のように実行すると、どのパッケージがどのような脆弱性を抱えているのかがわかる。</p>
+
+<pre><code># pkg_admin fetch-pkg-vulnerabilities
 # pkg_admin audit
 Package libxslt-1.1.30 has a insufficiently-random-numbers vulnerability, see https://nvd.nist.gov/vuln/detail/CVE-2015-9019
 Package git-base-2.14.1nb2 has a command-injection vulnerability, see https://nvd.nist.gov/vuln/detail/CVE-2017-14867
 Package libxml2-2.9.5 has a denial-of-service vulnerability, see https://nvd.nist.gov/vuln/detail/CVE-2017-8872</code></pre>
-    <p>libxsltとgit-base、libxmlパッケージに脆弱性があるとわかる。</p>
-    <p>脆弱性のあるパッケージはpkgsrcからインストールできないようになっているが、脆弱性があると認識した上でパッケージをインストールするには/etc/mk.confにALLOW_VULNERABLE_PACKAGES=yesを追加する。</p>
 
-    <h2 id="delete">pkg_delete(1)</h2>
-    <p>pkg_delete(1)は与えられたパッケージ名をデータベース（標準では/var/db/pkg）から探し、あれば削除する。pkgsrcでmake installを実行してインストールしたパッケージの場合、削除したいパッケージのディレクトリまで移動しmake deinstallを実行することもできる。</p>
-    <p>たとえばfirefoxパッケージを削除するとき
-    <pre><code># pkg_delete firefox</code></pre>
-    と
-    <pre><code># cd /usr/pkgsrc/www/firefox
+<p>libxsltとgit-base、libxmlパッケージに脆弱性があるとわかる。</p>
+
+<p>脆弱性のあるパッケージはpkgsrcからインストールできないようになっているが、脆弱性があると認識した上でパッケージをインストールするには/etc/mk.confに<code>ALLOW_VULNERABLE_PACKAGES=yes</code>を追加する。</p>
+
+<h2 id="delete">pkg_delete(1)</h2>
+<p>pkg_delete(1)は与えられたパッケージ名をデータベース（標準では/var/db/pkg）から探し、あれば削除する。pkgsrcでmake installを実行してインストールしたパッケージの場合、削除したいパッケージのディレクトリまで移動しmake deinstallを実行することもできる。</p>
+
+<p>たとえばfirefoxパッケージを削除するときは下記のどちらかを実行する。</p>
+
+<pre><code># pkg_delete firefox</code></pre>
+
+<pre><code># cd /usr/pkgsrc/www/firefox
 # make deinstall</code></pre>
-    のどちらかを実行する。
-    </p>
 
-    <h2 id="create">pkg_create(1)</h2>
-    <p>pkg_create(1)はその名の通りパッケージを作る。/usr/pkgsrc/packages/Allにあるtarballはpkg_create(1)によって生成されている。</p>
-    <p>pkg_create(1)はパッケージに関する情報を含んだファイル（メタデータ）を必要とする。</p>
-    <table border=1>
-      <thead>
-        <tr>
-          <th>メタデータ</th>
-          <th>内容</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>+BUILD_INFO</td>
-          <td>ビルドした日時、コンパイラの種類とバージョン、コンパイラのフラグ、ライセンス……といったビルド環境の情報</td>
-        </tr>
-        <tr>
-          <td>+BUILD_VERSION</td>
-          <td>PLIST（パッケージングされてるソフトウェアの名前やパスのリスト）やパッチファイルなどのバージョン</td>
-        </tr>
-        <tr>
-          <td>+INSTALL</td>
-          <td>pkg_add(1)がパッケージの展開前・展開後に実行するスクリプト</td>
-        </tr>
-        <tr>
-          <td>+DEINSTALL</td>
-          <td>pkg_delete(1)がパッケージの削除前・削除後に実行するスクリプト</td>
-        </tr>
-        <tr>
-          <td>+SIZE_ALL</td>
-          <td>依存しているパッケージも含め、インストールされる全ファイルの大きさの合計</td>
-        </tr>
-        <tr>
-          <td>+SIZE_PKG</td>
-          <td>インストールされる全ファイルの大きさの合計</td>
-        </tr>
-        <tr>
-          <td>+COMMENT</td>
-          <td>パッケージのコメント</td>
-        </tr>
-        <tr>
-          <td>+DESC</td>
-          <td>パッケージの詳細</td>
-        </tr>
-        <tr>
-          <td>+CONTENTS</td>
-          <td>インストールされるファイル名とそのパスのリスト</td>
-        </tr>
-      </tbody>
-    </table>
+<h2 id="create">pkg_create(1)</h2>
+<p>pkg_create(1)はその名の通りパッケージを作る。/usr/pkgsrc/packages/Allにあるtarballはpkg_create(1)によって生成されている。</p>
 
-    <h2 id="info">pkg_info(1)</h2>
-    <p>pkg_info(1)はパッケージの情報を表示する。マニュアルを読むとオプションの数が多いものの、大抵の場合はオプションを何も付けずに実行するだけで済む。</p>
-    <p>特定のファイルがどのパッケージに格納されているのかを調べるには-Feオプションを使う。
-    <pre><code> $ pkg_info -Fe /usr/pkg/bin/vim
-vim-8.1.0216</code></pre></p>
-    <p>特定のファイルを提供しているパッケージの、提供しているファイルの一覧を調べるには-LFオプションを使う。
-    <pre><code> $ pkg_info -LF /usr/pkg/bin/vim
+<p>pkg_create(1)はパッケージに関する情報を含んだファイル（メタデータ）を必要とする。</p>
+<table border=1>
+<thead>
+  <tr>
+    <th>メタデータ</th>
+    <th>内容</th>
+  </tr>
+</thead>
+<tbody>
+  <tr>
+    <td>+BUILD_INFO</td>
+    <td>ビルドした日時、コンパイラの種類とバージョン、コンパイラのフラグ、ライセンス……といったビルド環境の情報</td>
+  </tr>
+  <tr>
+    <td>+BUILD_VERSION</td>
+    <td>PLIST（パッケージングされてるソフトウェアの名前やパスのリスト）やパッチファイルなどのバージョン</td>
+  </tr>
+  <tr>
+    <td>+INSTALL</td>
+    <td>pkg_add(1)がパッケージの展開前・展開後に実行するスクリプト</td>
+  </tr>
+  <tr>
+    <td>+DEINSTALL</td>
+    <td>pkg_delete(1)がパッケージの削除前・削除後に実行するスクリプト</td>
+  </tr>
+  <tr>
+    <td>+SIZE_ALL</td>
+    <td>依存しているパッケージも含め、インストールされる全ファイルの大きさの合計</td>
+  </tr>
+  <tr>
+    <td>+SIZE_PKG</td>
+    <td>インストールされる全ファイルの大きさの合計</td>
+  </tr>
+  <tr>
+    <td>+COMMENT</td>
+    <td>パッケージのコメント</td>
+  </tr>
+  <tr>
+    <td>+DESC</td>
+    <td>パッケージの詳細</td>
+  </tr>
+  <tr>
+    <td>+CONTENTS</td>
+    <td>インストールされるファイル名とそのパスのリスト</td>
+  </tr>
+</tbody>
+</table>
+
+<h2 id="info">pkg_info(1)</h2>
+<p>pkg_info(1)はパッケージの情報を表示する。マニュアルを読むとオプションの数が多いものの、大抵の場合はオプションを何も付けずに実行するだけで済む。</p>
+
+<p>特定のファイルがどのパッケージに格納されているのかを調べるには-Feオプションを使う。</p>
+
+<pre><code>$ pkg_info -Fe /usr/pkg/bin/vim
+8.1.0216</code></pre>
+
+<p>特定のファイルを提供しているパッケージの、提供しているファイルの一覧を調べるには-LFオプションを使う。</p>
+
+<pre><code>$ pkg_info -LF /usr/pkg/bin/vim
 Information for vim-8.1.0216:
 
 Files:
 /usr/pkg/bin/rview
 /usr/pkg/bin/rvim
-/usr/pkg/bin/vim</code></pre></p>
-    <hr>
-    <footer>
-      <address>
-        Yuuki Enomoto <a href="mailto:uki@e-yuuki.org">uki@e-yuuki.org</a>
-      </address>
-      <p><small>Copyright (C) 2015,2016,2017,2018 Yuuki Enomoto</small></p>
-    </footer>
-  </body>
+/usr/pkg/bin/vim</code></pre>
+
+<hr>
+<footer>
+<address>
+Yuuki Enomoto <a href="mailto:uki@e-yuuki.org">uki@e-yuuki.org</a>
+</address>
+<p><small>Copyright (C) 2015,2016,2017,2018 Yuuki Enomoto</small></p>
+</footer>
+</body>
 </html>
 
