--- a/introduction/introduction.html
+++ b/introduction/introduction.html
@@ -3,7 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
-<link rel="stylesheet" type="text/css" href="../css/typesetting.css">
+<style>
+@media print, screen and (min-width:640px){
+*{max-width:40em;}
+code{font-size:90%; line-height:1.4;}
+body{margin-top:5em; margin-bottom:5em; margin-right:2em; margin-left:3em; line-height:1.5;}
+pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; line-height:0; border:solid 1px; border-radius:1em; white-space:pre-wrap;}}
+@media only screen and (max-width:640px){*{max-width:100%; width:100%;}}
+</style>
 <title>e-yuuki.org</title>
 </head>
 <body>
