--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; li
 <ul>
 <li><a href="#articles">Web Articles</a>
 <ul>
+<li><a href="./introduction/index.html">Unix入門</a></li>
 <li><a href="#netbsd">NetBSD</a></li>
 <li><a href="#essay">Essay</a></li>
 </ul>
@@ -31,18 +32,23 @@ pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; li
 </ul>
 
 <h2 id="articles">Web Articles</h2>
-<h3 id="netbsd">NetBSD</h3>
+
+<ul>
+<li><a href="./introduction/index.html">Unix入門</a></li>
+
+<li id="netbsd">NetBSD
 <ul>
 <li><a href="./netbsd/pkg_install.html">pkg_installについて</a></li>
 <li><a href="./netbsd/thinkpad.html">NetBSD on ThinkPad</a></li>
 <li><a href="./netbsd/xen.html">Xenで準仮想化環境を構築する</a></li>
 <li><a href="./netbsd/pkgsrc-wip.html">pkgsrc-wip上での作業</a></li>
-</ul>
+</ul></li>
 
-<h3 id="essay">Essay</h3>
+<li id="essay">Essay</li>
 <ul>
 <li><a href="./essay/webpage.html">動的Webページから静的Webページへの移行</a></li>
 </ul>
+</li></ul>
 
 <h2 id="papers">Papers and Presentations</h2>
 <ul>
