--- a/essay/pkgintro.html
+++ b/essay/pkgintro.html
@@ -17,16 +17,36 @@ pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; li
 <h1>GNU/LinuxとBSD Unixのパッケージ概観</h1>
 <p>Last Update: <time>2018</time></p>
 <hr>
-<h2>パッケージとは</h2>
+<h2>Unix パッケージのはじまりは？</h2>
 <p>パッケージ（package）は「荷物」や「梱包」の他にソフトウェアの管理・配布形式（形態？）も意味する。しかしこの言葉がいつからソフトウェアに対して使うようになったのか分からない。確かに「ソフトウェアやその設定ファイル・マニュアルなどを含んだ単一のアーカイブ」は言われてみれば荷物っぽいし、実際にこれを作るときはまるで段ボールのような箱にデータを詰め込んでいる感覚があるので「パッケージ」という言葉はまさにぴったりだ。ただ、最初にそれを言い始めたのはいつ・誰なんだろうか。</p>
 
 <p>パッケージはよく「ソフトウェア・ライブラリ・設定ファイル・マニュアルなどをアーカイブにしたもの」というような説明がされる。僕は「パッケージ自身の情報（メタデータ）」をこの説明に付け加えたいといつも考えてしまう。たとえばDebian GNU/Linux上で<code>dpkg(1)</code>や<code>apt(8)</code>といったパッケージマネージャを実行してなんらかのパッケージをインストールするとき、インストール対象のパッケージが依存している別のパッケージも自動でインストールされたりあるいはサジェストされたりするのはすべてメタデータのおかげだ。</p>
 
-<p>おそらく、テープやCD-ROMの形態でソフトウェアを「梱包」して販売する企業が初めに「パッケージ」をソフトウェアに対しても使い始めたのだと予想している。しかし、このような配布形態にはパッケージマネージャが読み取り可能なメタデータはおそらく含まれていないだろう。パッケージをソフトウェア＋メタデータのアーカイブという観点からすると、起源であるにせよこれではまだ機能が不足している。現在僕たちが何気なく<code>apt(8)</code>から操作するパッケージの形式はいつ成立したのだろう。</p>
+<p>メタデータはソフトウェアのパッケージにのみ存在するわけではない。僕たちが引っ越しや贈り物の準備をするとき、段ボールにモノを詰め込むだけでなく、配送業者向けに宛先や送り主の名前を書いた伝票を段ボールに貼り付ける。これもメタデータといっていいだろう。</p>
+
+<p>おそらく、テープやCD-ROMの形態でソフトウェアを「梱包」して販売する企業が初めに「パッケージ」をソフトウェアに対しても使い始めたのだと予想している。しかしこのような配布形態にはパッケージマネージャが読み取り可能なメタデータはおそらく含まれていないだろう。パッケージをソフトウェア＋メタデータのアーカイブという観点からすると、起源であるにせよこれではまだ機能が不足している。現在僕たちが何気なく<code>apt(8)</code>から操作する、Unix上で扱われるパッケージの形式はいつ成立したのだろう。</p>
+
+<h2>GNU/Linuxとパッケージマネージャ</h2>
 
 <p>パッケージ主体のGNU/LinuxディストリビューションはDebian GNU/Linuxが先陣を切った。Debian 0.01から0.90までのリリースについては不明だが、1994年1月のDebian 0.91は「このリリースは、パッケージのインストールおよび削除ができる単純なパッケージシステムを備えていました」[<a href="#debian-project-history">Debian, 2017</a>]とされ、1995年3月のDebian 0.93R5では「基本システムのインストール後は、パッケージマネージャ (dpkg) がパッケージのインストールに使われました」[<a href="#debian-project-history">Debian, 2017</a>]とある。</p>
 
 <p>しかしDebian GNU/Linuxがパッケージに関して独占的であったかというと、そうではなかったようだ。GNU/LinuxディストリビューションをCD-ROMの形態で販売したRed Hat社が提供したRed Hat Linuxは、1994年の夏にRed Hat LinuxとそのパッケージマネージャRPPの展示のためにプレビュー版（バージョン0.8）がリリースされ、1994年10月31日にバージョン0.9となるHalloweenがリリースされた[<a href="#redhat-20-year">Red Hat, 2014</a>][<a href="#smoogespace">Stephen, 2006</a>]。Debian GNU/Linux 0.91のリリースと同じ年だ。「Fully "packagized" system for fine-grained installation control, easy upgrades, and simple distribution mechanism for your applications」[<a href="#redhat-commercial">Red Hat, 1995</a>]とアピールされたのは1995年のバージョン1.1なので、Halloweenの時点でOS全体がパッケージ管理されていたのかは定かではない。</p>
+
+<p>Linuxカーネルが公開されたのは1991年の8月だった[<a href="#linus">Linus, 1991</a>]。GNU/LinuxディストリビューションそのものはDebian GNU/Linuxではなく、1993年7月にリリースされたSlackwareが本源だ[<a href="#slackware">Slackware, 2005</a>, Chapter 1]。しかもSlackwareはRed Hat Linux（のおそらくプレビュー版以前）より先にパッケージマネージャ<code>pkgtool(8)</code>を実装していたという。しかしパッケージの依存関係はチェックせず、<code>doinst.sh</code>というポストインストールスクリプトを実行する簡素なものだったようだ。</p>
+
+<blockquote>
+There's a myth that's been going around ever since RedHat debuted RedHat Package Manager, that Slackware has no package management tool. This simply couldn't be further from the truth. Slackware has always included a package manager, even before RedHat existed. While not as full-featured or as ubiquitous as rpm (or for that matter deb), pkgtool and its associated programs are every bit as good at installing packages as rpm. The truth about pkgtool is not that it doesn't exist, but that it doesn't do any dependency checking.[<a href="#slackware">Slackware, 2005</a>, Chapter 18]
+</blockquote>
+
+<h2>GNU/Linux以前</h2>
+
+<p>ではSlackwareがパッケージとパッケージマネージャを取り入れた最初のUnixだったのだろうか？それを確定させるにはSlackware以前のUnixについて調査する必要がある。これは難しい。386BSD（1992年2月）や4.3BSD、System Vなどの他に、4.2BSDやSystem Vの後継製品も調査しなければならないからだ。</p>
+
+<blockquote>
+  AT&amp;TのSystem &#8546;またはSystem Vの後継製品は、AT&amp;T、Altos、Apollo、Compaq、Convergent、HP、Honeywel、IBM、ITT、Intel、Interactive、Masscomp、Microport、Microsoft、Motorola、NCR、NUXI、Opus、SCO、Silicon Graph ics、Sperry、Sun、Tandy、UniSoft、Wollongongから販売されていた。さらに、Amdahl、Apollo、Apple、CrayDEC、Data General、HP、IBM、Intel、Motorola、Unisys、およびほかのホストから、独自のUnixが発売されていた。それらの一部は、4.2BSDに基づいていた。[<a href="#century">Salus, 2000</a>]
+</blockquote>
+
+<p>これはそう簡単に調べられるものではないが、共立出版株式会社の『UNIX System V コマンド・ノート』がたまたま手に入ったので調べてみると、少なくともこの本の中にはパッケージの操作に関するコマンドは載っていなかった[<a href="#sysv">System V, 1986</a>]。</p>
 
 <h2>Debian GNU/Linux</h2>
 <h2>Red Hat Enterprise Linux</h2>
@@ -39,6 +59,10 @@ pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; li
 <li id="redhat-20-year">Red Hat Enterprise Linux Team, <i>20 Years of “Halloween:” Celebrating the First Release of Red Hat Linux</i>, <a href="https://www.redhat.com/en/blog/20-years-%E2%80%9Challoween%E2%80%9D-celebrating-first-release-red-hat-linux">https://www.redhat.com/en/blog/20-years-%E2%80%9Challoween%E2%80%9D-celebrating-first-release-red-hat-linux</a>, 2014</li>
 <li id="smoogespace">Stephen John Smoogen, <i>The Truth Behind Red Hat/Fedora Names</i>, <a href="https://www.smoogespace.com/documents/behind_the_names.html">https://www.smoogespace.com/documents/behind_the_names.html</a>, Update 2006/06/19</li>
 <li id="redhat-commercial"><i>COMMERCIAL: Red Hat Commercial Linux 1.1, Pacific Hi-Tech CD set.</i>, <a href="https://groups.google.com/forum/#!topic/comp.os.linux.announce/Optn4pqWFsw">https://groups.google.com/forum/#!topic/comp.os.linux.announce/Optn4pqWFsw</a>, 1995/08/01</li>
+<li id="linus">Linus Benedict Torvalds, <i>What would you like to see most in minix?</i>, comp.os.minix, <a href="https://groups.google.com/forum/#!topic/comp.os.minix/dlNtH7RRrGA">https://groups.google.com/forum/#!topic/comp.os.minix/dlNtH7RRrGA</a>, 1991/08/26</li>
+<li id="slackware">Alan Hicks, Chris Lumens, David Cantrell, Logan Johnson, <i>Slackware Linux Essentials</i>, <a href="http://www.slackbook.org/html/introduction-slackware.html">http://www.slackbook.org/html/introduction-slackware.html</a>, 2005</li>
+<li id="century">Peter H. Salus, QUIPU LLC訳, <i>UNIXの1/4世紀</i>, 株式会社アスキー, ISBN4-7561-3659-1, 2000</li>
+<li id="sysv">ソフトウェアインフォメーションセンタ 編, <i>UNIX System V コマンド・ノート</i>, 共立出版株式会社, ISBN4-320-02284-X, 1986</li>
 </ol>
 <hr>
 <footer>
