--- a/essay/pkgintro.html
+++ b/essay/pkgintro.html
@@ -18,7 +18,7 @@ pre{padding-top:1em; padding-left:2em; padding-right:2em; padding-bottom:1em; li
 <p>Last Update: <time>2018-10-03</time></p>
 <hr>
 <h2>なぜパッケージに注目するのか</h2>
-<p>パッケージ（package）はオペレーティングシステム（OS）の重要なインフラのひとつだ。OSと聞くとプロセス管理・メモリ管理・ファイルシステムといったカーネルの機能を連想してしまいがちだが、それよりももっと高いレイヤのアプリケーションだって立派にOSの一部だ。プログラマにとって統合開発環境やテキストエディタ・バージョン管理システム・コンパイラは欠かせない。一般ユーザにとっても統合デスクトップ環境が提供する豪華なグラフィカルは欠かせない。特にWebブラウザはもうそれ無しで生活することなど考えられないような時代になっている。</p>
+<p>パッケージ（package）はオペレーティングシステム（OS）の重要なインフラのひとつだ。OSと聞くとプロセス管理・メモリ管理・ファイルシステムといったカーネルの機能を連想してしまいがちだ。『4.4BSDの設計と実装』『詳解 Linuxカーネル』『オペレーティングシステム 設計と理論およびMINIXによる実装』といった分厚い書籍を思い浮かべるかもしれない。でもそれよりももっと高いレイヤのアプリケーションだって立派にOSの一部だ。プログラマにとって統合開発環境やテキストエディタ・バージョン管理システム・コンパイラは欠かせない。一般ユーザにとっても統合デスクトップ環境が提供する豪華なグラフィカルは欠かせない。特にWebブラウザはもうそれ無しで生活することなど考えられないような時代になっている。</p>
 
 <p>Debian GNU/LinuxやRed Hat Enterprise Linux（RHEL）のようにOS全体をパッケージで管理しているケースもあれば、NetBSDやFreeBSDのようにベースシステムに無いソフトウェアをパッケージで管理しているケースもある。システム管理という面ではパッケージはとても便利な機能なので、FreeBSDではベースシステムをパッケージ化してパッケージマネージャから管理できるようにするPkgBase[<a href="#pkgbase">FreeBSD Wiki</a>]が開発されているくらいだ（NetBSDも昔syspkgというPkgBaseと同じコンセプトの実装が進められていたが現在は停滞している[<a href="syspkg">NetBSD Wiki</a>]）。</p>
 
