--- a/essay/pkgintro.html
+++ b/essay/pkgintro.html
@@ -105,7 +105,9 @@ In 1999, I was working at an investment bank in London, and needed a packaging s
 
 <h2>まとめ</h2>
 
-<p>GNU/LinuxとBSD Unixのパッケージについて簡単に述べた。GNU/LinuxはDebian GNU/Linux系とRHEL系以外にも多くの種類があるのでとてもじゃないが追いきれない。BSD Unixもまた然りだ。でもたかだか4種類のOSのパッケージ管理を比べただけでもかなりの差異があることに気づく。なぜそう設計したのか？祖先はなんなのか？と考えると、調べることはたくさんあるのだなと思ってしまう。</p>
+<p>はじめになぜパッケージに注目するのかを説明した。パッケージはOSのインフラで、便利で手放せないものだ。</p>
+
+<p>そしてGNU/LinuxとBSD Unixのパッケージについて簡単に述べた。GNU/LinuxはDebian GNU/Linux系とRHEL系以外にも多くの種類があるのでとてもじゃないが追いきれない。BSD Unixもまた然りだ。でもたかだか4種類のOSのパッケージ管理を比べただけでもかなりの差異があることに気づく。なぜそう設計したのか？祖先はなんなのか？と考えると、調べることはたくさんあるのだなと思ってしまう。</p>
 
 <p>そしてそもそも、Unixパッケージのはじまりは？という問いに答えられていない。Slackwareの簡素なパッケージか、もしくはPorts Collectionの親がいたのか。課題は残るし調べ足りないことばかりだ。</p>
 
